--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "blog",
     "version": "1.0.0",
     "description": "",
-    "main": "app.js",
+    "main": "src/app.js",
     "scripts": {
-        "start": "nodemon --inspect app.js",
+        "start": "nodemon --inspect src/app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -23,9 +23,11 @@
     },
     "homepage": "https://github.com/tan198/myBlog#readme",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "express-handlebars": "^5.3.0"
     },
     "devDependencies": {
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.7"
     }
 }
